--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <div class="login-background">
         <img src="./img/login-background.jpeg" />
+        <div class="background">
+        </div>
     </div>
 </body>
 
