--- a/index.html
+++ b/index.html
@@ -7,13 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Padauk&family=Passion+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="login-background">
-        <img src="./img/login-background.jpeg" />
-        <div class="background">
-        </div>
+    <div class="img"></div>
+    <div class="logo">
+        <img src="./img/logo.svg" alt="">
+    </div>
+    <div class="contaner">
+        <div class="big-circle"></div>
+        <div class="small-circle"></div>
+
+        <form action="">
+            <div class="card">
+                <div class="formgroup">
+                    <p>Widespread</p>
+                </div>
+                <div class="formgroup blur">
+                    <input type="text" name="username" id="username" placeholder="Username" autocomplete="off">
+                </div>
+                <div class="formgroup blur">
+                    <input type="text" name="password" id="" placeholder="Password" autocomplete="off">
+                </div>
+                <div class="formgroup blur">
+                    <input type="submit" name="btnsummit" id="btnsubmit">
+                </div>
+                <div class="formgroup">
+                    <a href="">Forget password?</a>
+                    <hr>
+                    <p>Don't have an account?<a href=""><span> Sign up</span></a>
+                    </p>
+                </div>
+            </div>
+        </form>
     </div>
 </body>
 
